deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nzngarage-longtail-suggestion-backend
spec:
 replicas: 1
 selector:
     matchLabels:
       app: nzngarage-longtail-suggestion-backend
 template:
   metadata:
     labels:
       app: nzngarage-longtail-suggestion-backend
   spec:     # pod spec                  
     containers:
     - name: nzngarage-longtail-suggestion-backend
       image: us.icr.io/nzngarage/nzngarage-longtail-suggestion-backend:latest
       ports:
         - containerPort: 6005
       imagePullPolicy: Always
