service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nzngarage-longtail-suggestion-backend
  name: nzngarage-longtail-suggestion-backend-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 6005
  selector:
    app: nzngarage-longtail-suggestion-backend
  type: LoadBalancer
